tests/paczka1/fuzzy1/43822027.err
Error in line 4: hk57LEr A862 79,7
Error in line 12: hk57LEr A891 53,0
Error in line 3: A891 A862 27,6
Error in line 15: Dw37XZdap6 S526 20,8
Error in line 34: 1pSfRIlD9T A875 40,2
Error in line 37: 1pSfRIlD9T A862 51,7
